[package]
name = "intellij_ramdisk_target"
version = "0.1.0"
authors = ["Vlad Vasiliu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
fern = { version = "0.5" }
log = { version = "0.4" }
